--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"dependencies": {
+		"serve": "^14.2.0"
+	},
 	"devDependencies": {
-		"serve": "^14.2.0",
 		"vite": "^4.4.8"
 	}
 }
