--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "dotnet fable watch --run npx vite",
-		"build": "vite build",
+		"build": "dotnet fable && vite build",
 		"start": "serve dist"
 	},
 	"keywords": [],
