--- a/ray-tracer.fsproj
+++ b/ray-tracer.fsproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
 		<Compile Include="src/Vectors.fs" />
+		<Compile Include="src/Shapes.fs" />
 		<Compile Include="Program.fs" />
 	</ItemGroup>
 
