continue ray tracer tutorial

--- a/ray-tracer.fsproj
+++ b/ray-tracer.fsproj
@@ -6,8 +6,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="src/Vectors.fs" />
+		<Compile Include="src/Vectors/*.fs" />
 		<Compile Include="src/Shapes.fs" />
+		<Compile Include="src/Image.fs" />
 		<Compile Include="Program.fs" />
 	</ItemGroup>
 
