--- a/ray-tracer.fsproj
+++ b/ray-tracer.fsproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Include="src/Utils.fs" />
 		<Compile Include="src/Vectors/*.fs" />
 		<Compile Include="src/Shapes.fs" />
 		<Compile Include="src/Image.fs" />
